--- a/ammanhs/css/thread.css
+++ b/ammanhs/css/thread.css
@@ -106,7 +106,6 @@
 	width: 0px;
 	margin: 0 9px;
 }
-
 .left-arrow{
 	overflow: hidden;
 	display: inline-block;
@@ -116,35 +115,28 @@
 	margin-top: -90%;
 	margin-right: 96%;
 }
-
 .vote-down-off{
 	border-top-color: rgba(0, 0, 0, 0.199219);
 	cursor: pointer;
 }
-
 .vote-up-off{
 	border-bottom-color: rgba(0, 0, 0, 0.199219);
 	cursor: pointer;
 }
-
 .vote-down-on{
 	border-top-color: #508850;
 	cursor: default;
 }
-
 .vote-up-on{
 	border-bottom-color: #508850;
 	cursor: default;
 }
-
 .vote-down-off:hover{
 	border-top-color: #508850;
 }
-
 .vote-up-off:hover{
 	border-bottom-color: #508850;	
 }
-
 .vote-number{
 	text-align: center;
 	font-size: 20px;
@@ -153,21 +145,24 @@
 }
 .reply-content{
 	width: 100%;
-	margin-right: -30px;
-	vertical-align: top;
+	margin-left: -40px;
+	float: right;
+}
+.reply-content > div{
 	padding: 10px;
 }
 #thread-content{
 	width: 100%;
-	vertical-align: top;
 	padding-top: 20px;
+	margin-left: -40px;
+	float: right;
 }
 .reply-vote, #thread-vote{
 	width: 40px;
+	float: left;
 }
 #thread-vote{
 	padding-top: 20px;
-	vertical-align: top;
 }
 #new-thread{
 	padding-top: 10px;
@@ -184,23 +179,25 @@
 .reply-user-title a:hover, .shadow-box a:hover{
 	text-decoration: none;
 }
+.reply-user-title h5{
+	margin: 5px 10px 5px 0;
+}
 .muted{
 	float: left;
 	margin-left: 10px;
 }
-.reply-content{
-	padding: 10px 10px 0 10px;
-}
 .reply-user{
-	margin-top: 10px;
-	padding: 4px;
-	border: 1px solid #DDD;
-	-webkit-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	-webkit-box-shadow: rgba(0, 0, 0, 0.199219) 0px 0px 10px 0px;
-	-moz-box-shadow: inset 0 1px 1px rgba(0,0,0,0.05);
-	box-shadow: rgba(0, 0, 0, 0.199219) 0px 0px 10px 0px;
+	padding: 5px;
+	width: 15%;
+	display: inline-table;
+}
+.thread-reply{
+	width: 80%;
+	float: left;
+}
+.thread-reply .shadow-box{
+	padding: 1px;
+	margin-right: 15px;
 }
 #new-thread td{
 	vertical-align: top;
@@ -212,4 +209,7 @@
 	text-decoration: none !important;
 	color: #333333 !important;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
+}
+#thread-content img, .reply-content img{
+	max-width: 90% !important;
 }
