--- a/ammanhs/css/thread.css
+++ b/ammanhs/css/thread.css
@@ -150,12 +150,17 @@
 }
 .reply-content > div{
 	padding: 10px;
+	padding-left: 40px;
 }
 #thread-content{
 	width: 100%;
 	padding-top: 20px;
 	margin-left: -40px;
 	float: right;
+}
+#thread-content > span{
+	padding-left: 40px;
+	display: block;
 }
 .reply-vote, #thread-vote{
 	width: 40px;
@@ -209,7 +214,4 @@
 	text-decoration: none !important;
 	color: #333333 !important;
 	text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.2);
-}
-#thread-content img, .reply-content img{
-	max-width: 90% !important;
 }
