Adding Change Password Feature

--- a/ammanhs/css/octicons.css
+++ b/ammanhs/css/octicons.css
@@ -62,3 +62,8 @@
 .octicon-bug:before{content:"\f291"}
 .octicon-database:before{content:"\f296"}
 .octicon-clock:before{content:"\f29e"}
+.octicon-bookmark:before{content:"\f07b"}
+.octicon-card:before{content:"\f045"}
+.octicon-mobile:before{content:"\f038"}
+.octicon-members:before{content:"\f019"}
+.octicon-edit:before{content:"\f058"}
