--- a/ammanhs/css/main.css
+++ b/ammanhs/css/main.css
@@ -13,11 +13,48 @@ html{
     padding-top: 60px;
     font-family: Arial, sans-serif;
 }
-#footer div{
-    display: inline-table;
+#footer-bg{
+    background: url('/images/common/robots-bg.png') repeat-x;
+    width: 100%;
+    height: 54px;
+}
+#footer > div{
+    display: inline-block;
+}
+#footer > .copyrights{
     width: 50%;
-    float:right;
-    padding-bottom: 20px;
+    float: right;
+    margin-bottom: 20px;
+}
+#footer-links{
+}
+#footer-links > div{
+    display: inline-block;
+    padding: 0 5px;
+}
+#follow-us-footer{
+    display: block !important;
+    margin-top: 20px;
+}
+#sponsers{
+    direction: ltr;
+    width: 300px;
+    float: left;
+    border-right: 1px solid #EEE;
+}
+#sponsers > a{
+    display: inline-block;
+    width: 90px;
+    height: 90px;
+}
+#sponser-eshtre{
+    background: url('/images/sponsers/eshtre.png') no-repeat;
+}
+#sponser-jubilee{
+    background: url('/images/sponsers/jubilee.png') no-repeat;
+}
+#sponser-sparkfun{
+    background: url('/images/sponsers/sparkfun.png') no-repeat;
 }
 #content{
     line-height: 20px;
