--- a/ammanhs/css/thread.css
+++ b/ammanhs/css/thread.css
@@ -149,7 +149,8 @@
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 30px;
-	height: 25px;
+	height: 34px;
+	margin-top: 9px;
 }
 .reply-content{
 	width: 100%;
