--- a/ammanhs/css/activity.css
+++ b/ammanhs/css/activity.css
@@ -74,6 +74,7 @@ hshadow-box{
 
 #activity-body{
 	word-wrap: break-word;
+	text-align: justify;
 }
 .reply-user-title{
 	border-bottom: 1px solid rgba(0, 0, 0, 0.05);
@@ -95,6 +96,7 @@ hshadow-box{
 .reply-content{
 	width: 100%;
 	float: right;
+	text-align: justify;
 }
 .reply-content > div{
 	padding: 10px;
@@ -111,6 +113,7 @@ hshadow-box{
 .activity-reply{
 	width: 80%;
 	float: left;
+	display: inline-table;
 }
 .activity-reply .shadow-box{
 	padding: 1px;
