--- a/ammanhs/css/thread.css
+++ b/ammanhs/css/thread.css
@@ -48,11 +48,12 @@
 	float: left;
 }
 .tab-content{
-	margin-top: -50px;
+	margin-top: -56px;
 	font-size: 20px;
 	font-weight: bold;
 	line-height: 30px;
 	color: #888;
+	overflow: hidden !important;
 }
 .shadow-box{
 	-webkit-border-radius: 6px;
@@ -156,6 +157,7 @@
 	width: 100%;
 	margin-left: -40px;
 	float: right;
+	text-align: justify;
 }
 .reply-content > div{
 	padding: 10px;
@@ -166,6 +168,7 @@
 	padding-top: 20px;
 	margin-left: -40px;
 	float: right;
+	text-align: justify;
 }
 #thread-content > span{
 	padding-left: 40px;
@@ -221,6 +224,7 @@
 .thread-reply{
 	width: 80%;
 	float: left;
+	display: inline-table;
 }
 .thread-reply .shadow-box{
 	padding: 1px;
