Fix thread reply links color

--- a/ammanhs/css/thread.css
+++ b/ammanhs/css/thread.css
@@ -163,6 +163,9 @@
 	padding: 10px;
 	padding-left: 40px;
 }
+.reply-content a{
+	color: #08c;
+}
 #thread-content{
 	width: 100%;
 	padding-top: 20px;
