--- a/ammanhs/css/main.css
+++ b/ammanhs/css/main.css
@@ -1,11 +1,4 @@
-@font-face{
-	font-family: GE SS Medium;
-	src: url('../fonts/GESSMedium.otf');
-}
-@font-face{
-    font-family: GE SS Light;
-    src: url('../fonts/GESSLight.otf');
-}
+@import url(http://fonts.googleapis.com/earlyaccess/droidarabickufi.css);
 html{
     direction: rtl;
 }
@@ -74,37 +67,37 @@ form .help-inline{
     font-size: 18px;
 }
 @-webkit-keyframes wipe{
-    0% { -webkit-mask-position: -90px 0; }
-    100% { -webkit-mask-position: 230px 0; }
+    0% { -webkit-mask-position: -80px 0; }
+    100% { -webkit-mask-position: 320px 0; }
 }
 @-moz-keyframes wipe{
-    0% { -moz-mask-position: -90px 0; }
-    100% { -moz-mask-position: 230px 0; }
+    0% { -webkit-mask-position: -80px 0; }
+    100% { -webkit-mask-position: 320px 0; }
 }
 @-o-keyframes wipe{
-    0% { -o-mask-position: -90px 0; }
-    100% { -o-mask-position: 230px 0; }
+    0% { -webkit-mask-position: -80px 0; }
+    100% { -webkit-mask-position: 320px 0; }
 }
 @keyframes wipe{
-    0% { mask-position: -90px 0; }
-    100% { mask-position: 230px 0; }
+    0% { -webkit-mask-position: -80px 0; }
+    100% { -webkit-mask-position: 320px 0; }
 }
 .flash:hover{
 	-webkit-animation: wipe 1s;
-    -webkit-mask-position: -90px 0px;
-    -webkit-mask-size: 320px 200px;
+    -webkit-mask-position: -80px 0px;
+    -webkit-mask-size: 420px 200px;
     -webkit-mask-image: -webkit-gradient(linear, 61 47, 15 15, from(rgb(0, 0, 0)), color-stop(0.1, rgba(0, 0, 0, 0)), to(rgb(0, 0, 0)));
     -moz-animation: wipe 1s;
-    -moz-mask-position: -90px 0px;
-    -moz-mask-size: 320px 200px;
+    -moz-mask-position: -80px 0px;
+    -moz-mask-size: 420px 200px;
     -moz-mask-image: -moz-gradient(linear, 61 47, 15 15, from(rgb(0, 0, 0)), color-stop(0.1, rgba(0, 0, 0, 0)), to(rgb(0, 0, 0)));
     -o-animation: wipe 1s;
-    -o-mask-position: -90px 0px;
-    -o-mask-size: 320px 200px;
+    -o-mask-position: -80px 0px;
+    -o-mask-size: 420px 200px;
     -o-mask-image: -o-gradient(linear, 61 47, 15 15, from(rgb(0, 0, 0)), color-stop(0.1, rgba(0, 0, 0, 0)), to(rgb(0, 0, 0)));
     animation: wipe 1s;
-    mask-position: -90px 0px;
-    mask-size: 320px 200px;
+    mask-position: -80px 0px;
+    mask-size: 420px 200px;
     mask-image: gradient(linear, 61 47, 15 15, from(rgb(0, 0, 0)), color-stop(0.1, rgba(0, 0, 0, 0)), to(rgb(0, 0, 0)));
 }
 .navbar-search{
@@ -128,17 +121,17 @@ form .help-inline{
     transition: all 0.5s ease;
 }
 .breadcrumbs, .navbar-inner{
-    font-family: 'GE SS Medium', 'Droid Arabic Naskh', 'Monda', sans-serif;
+    font-family: 'Droid Arabic Kufi', 'Droid Arabic Naskh', 'Monda', sans-serif;
     font-weight: bold;
 }
 .ge-ss{
-    font-family: 'GE SS Medium', 'Droid Arabic Naskh', 'Monda', sans-serif;
+    font-family: 'Droid Arabic Kufi', 'Droid Arabic Naskh', 'Monda', sans-serif;
     font-weight: bold;
     text-decoration: none !important;
     font-style: normal;
 }
 .btn{
-    font-family: 'GE SS Light', 'Droid Arabic Naskh', 'Monda', sans-serif;
+    font-family: 'Droid Arabic Kufi', 'Droid Arabic Naskh', 'Monda', sans-serif;
     text-decoration: none !important;
     font-style: normal;
 }
@@ -241,4 +234,63 @@ form .help-inline{
 }
 .loading *{
     opacity: 0.2;
+}
+.panel {
+    margin-bottom: 20px;
+    background-color: #fff;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    -moz-box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+    box-shadow: 0 1px 1px rgba(0,0,0,0.05);
+}
+.panel-primary {
+    border-color: #428bca;
+}
+.panel-heading {
+    padding: 10px 15px;
+    border-bottom: 1px solid transparent;
+    border-top-right-radius: 3px;
+    border-top-left-radius: 3px;
+    text-align: center;
+    display: block;
+}
+.panel-primary>.panel-heading {
+    color: #fff;
+    background-color: #428bca;
+    border-color: #428bca;
+}
+.recent{
+    border-top: 1px solid #428bca;
+    padding: 10px;
+}
+.recent>span{
+    font-size: 13px;
+}
+.recent .muted{
+    float: left;
+}
+.recent .octicons{
+    font-size: 20px;
+    text-align: center;
+    padding: 0 4px;
+}
+.recent .octicons b{
+    font-size: 16px;
+}
+.yt-video{
+    float: none;
+    clear: both;
+    width: 100%;
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 25px;
+    height: 0;
+}
+.yt-video iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
