Thread Social Media Share Buttons

--- a/ammanhs/css/main.css
+++ b/ammanhs/css/main.css
@@ -286,6 +286,7 @@ form .help-inline{
     padding-bottom: 56.25%;
     padding-top: 25px;
     height: 0;
+    margin-bottom: 10px;
 }
 .yt-video iframe{
     position: absolute;
